Migrate to sequenced collection